--- a/localStorage.html
+++ b/localStorage.html
@@ -24,7 +24,8 @@
     newARR = JSON.parse(localStorage.getItem("myArr"))
     console.log(newARR)
 
-    localStorage.removeItem("myArr")
+    // localStorage.removeItem("myArr")
+    // localStorage.clear()
     localStorage.clear()
 </script>
 </html>
